--- a/config/algoliasearch.local.php.dist
+++ b/config/algoliasearch.local.php.dist
@@ -1,8 +1,8 @@
 <?php
 
-return array(
-    'algoliasearch' => array(
+return [
+    'algoliasearch' => [
         'application_id' => 'your-application-id',
         'api_key' => 'your-api-key',
-    ),
-);
+    ],
+];
